--- a/.project
+++ b/.project
@@ -26,4 +26,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>licenser_db.sql</name>
+			<type>1</type>
+			<location>/Users/talos/Projects/Eclipse Workspace/xlicenser/licenser_db.sql</location>
+		</link>
+	</linkedResources>
 </projectDescription>
