--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -46,20 +47,31 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
 		</dependency>
-		
-		
+				
 		<dependency> 
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-tomcat</artifactId>
 	        <scope>provided</scope>
     	</dependency>
-    	
+		
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>
+		
+    	<dependency>
+    		<groupId>org.scala-lang</groupId>
+    		<artifactId>scala-library</artifactId>
+    		<version>2.10.4</version>
+    	</dependency>
+    	    	
 	</dependencies>
 
 	<build>
